--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -420,12 +420,12 @@ button {
 }
 
 a {
-  color: #1b89bc;
+  color: #dbf8db;
   text-decoration: none;
 }
 
 a:hover {
-  color: #065b83;
+  color: #dbf8db;
   text-decoration: underline;
 }
 
