--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,27 +5,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Blog</title>
-  <link rel="stylesheet" href="/css/jass.css">
+  {{!-- <link rel="stylesheet" href="/css/jass.css"> --}}
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <a href="/">Tech Blog</a>
-      </h1>
-      <nav>
+  <div class="main">
+    <header class="header-main">
+      <nav class="nav">
         <!-- Conditionally render login or logout links -->
+        <a class="nav-link" href="/">Home Page</a>
+        <a class="nav-link" href="/dashboard">Dashboard</a>
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
+        <a class="nav-link" href="/profile">profile</a> |
         <button class="no-button" id="logout">logout</button>
         {{else}}
-        <a href="/login">login</a>
+        <a class="nav-link" href="/login">login</a>
         {{/if}}
       </nav>
+      <h1>
+        <a class="home-link" href="/">The Tech Blog</a>
+      </h1>
     </header>
-    <main class="container container-fluid mt-5">
+    <main>
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
