--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,10 +17,10 @@
         <a class="nav-link" href="/">Home Page</a>
         <a class="nav-link" href="/dashboard">Dashboard</a>
         {{#if logged_in}}
-        <a class="nav-link" href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
+        <a class="nav-link" href="/profile">Profile</a> |
+        <button class="no-button" id="logout">Logout</button>
         {{else}}
-        <a class="nav-link" href="/login">login</a>
+        <a class="nav-link" href="/login">Login</a>
         {{/if}}
       </nav>
       <h1>
