--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,22 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+<div class="login">
+  <h2>Login</h2>
 
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">name:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <a href="/signup">Sign up here!</a>
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
+  <form class="login-form">
+    <div class="form-group">
+      <label for="name-login">Name:</label>
+      <input class="form-input" type="text" id="name-login" />
+    </div>
+    <div class="form-group">
+      <label for="password-login">Password:</label>
+      <input class="form-input" type="password" id="password-login" />
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary" type="submit">login</button>
+    </div>
+    <div class="signup-link">
+      <a href="/signup">Sign up here!</a>
+    </div>
+  </form>
 </div>
-<script src="./js/login.js"></script>
+
+  <script src="./js/login.js"></script>
