the backend is 100% working for the signup and signin. the issue is somewhere in the front-end

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,6 @@
-<div class="login">
+<div class="card">
   <h2>Login</h2>
-
-  <form class="login-form">
+  <form id="login-form">
     <div class="form-group">
       <label for="name-login">Name:</label>
       <input class="form-input" type="text" id="name-login" />
@@ -11,7 +10,7 @@
       <input class="form-input" type="password" id="password-login" />
     </div>
     <div class="form-group">
-      <button class="btn btn-primary" type="submit">login</button>
+      <button class="btn" type="submit">login</button>
     </div>
     <div class="signup-link">
       <a href="/signup">Sign up here!</a>
@@ -20,3 +19,4 @@
 </div>
 
 <script src="../public/js/login.js"></script>
+
