--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,6 @@
-<div class="col-md-6">
+<div class="card">
   <h2>Signup</h2>
-
-  <form class="signup-form">
+  <form id="signup-form" class="card-body">
     <div class="form-group">
       <label for="name-signup">name:</label>
       <input class="form-input" type="text" id="name-signup" />
@@ -11,7 +10,10 @@
       <input class="form-input" type="password" id="password-signup" />
     </div>
     <div class="form-group">
-      <button class="btn btn-primary" type="submit">signup</button>
+      <button class="btn" type="submit">Signup</button>
+    </div>
+      <div class="login-link">
+      <a href="/login">Login here!</a>
     </div>
   </form>
 </div>
