login still not working but dashboard now can't be viewed untill user logs in

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,5 @@
 <article class="post">
 
-    {{#each posts as |post| }}
-        {{> post-details}}
-    {{/each}}
+    <p>this is the home page</p>
 
 </article>
