--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,8 +16,7 @@
         <!-- Conditionally render login or logout links -->
         <a class="nav-link" href="/">Home Page</a>
         <a class="nav-link" href="/dashboard">Dashboard</a>
-        {{#if logged_in}}
-        <a class="nav-link" href="/profile">Profile</a> |
+        {{#if logged_in}}|
         <button class="no-button" id="logout">Logout</button>
         {{else}}
         <a class="nav-link" href="/login">Login</a>
