everything seems to be working in the backend, all post in the db appear on the homepage, still playing with login/signup while working on other parts

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,7 @@
 <article class="post">
 
-    <p>this is the home page</p>
+    {{#each post as |post| }}
+        {{> post-details}}
+    {{/each}}
 
 </article>
