--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <article class="post">
 
     {{#each post as |post| }}
-        {{> post-details}}
+        {{> home-details}}
     {{/each}}
 
 </article>
