--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,21 +2,20 @@
   <h2>Signup</h2>
   <form id="signup-form" class="card-body">
     <div class="form-group">
-      <label for="name-signup">name:</label>
+      <label for="name-signup">Name:</label>
       <input class="form-input" type="text" id="name-signup" />
     </div>
     <div class="form-group">
-      <label for="password-signup">password:</label>
+      <label for="password-signup">Password:</label>
       <input class="form-input" type="password" id="password-signup" />
     </div>
     <div class="form-group">
       <button class="btn" type="submit">Signup</button>
     </div>
-      <div class="login-link">
+    <div class="login-link">
       <a href="/login">Login here!</a>
     </div>
   </form>
 </div>
 
-
-<script src="../public/js/signup.js"></script>
+<script src="/js/signup.js"></script>
