--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
         <a class="nav-link" href="/">Home Page</a>
         <a class="nav-link" href="/dashboard">Dashboard</a>
         {{#if logged_in}}|
-        <button class="no-button" id="logout">Logout</button>
+        <a class="nav-link" id="logout">Logout</a>
         {{else}}
         <a class="nav-link" href="/login">Login</a>
         {{/if}}
