when user adds new content it now gets added to blog page

--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -5,8 +5,8 @@
         <input class="form-input" type="text" id="post-title" name="post-title" />
 
 
-        <label class="form-label" for="content">Content</label>
-        <input class="form-input" id="post-content" name="content"  />
+        <label class="form-label" for="content">Text</label>
+        <input class="form-input" id="post_text" name="text"  />
 
         <button type="submit" class="btn">Create</button>
     </form>
