--- a/views/partials/home-details.handlebars
+++ b/views/partials/home-details.handlebars
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header">
-       <h4><a class="link" href="/post/{{id}}">{{title}}</a></h4>
-    </div>
+       <h2>{{title}}</h2>
         <p class="card-body">{{post_text}}</p>
+    </div>
 </div>
