--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,3 +1,4 @@
+{{!-- page is part if the user dashboard when they link of the title of the post to edit that post --}}
 <div class="card">
     <h3 class="card-header">Edit Post</h3>
     <form class="card-body edit-post-form">
